--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CASHY EVENT MANAGMENT</title>
+    <link rel="stylesheet" href="./index.css">
+</head>
+<body>
+    <div class="nav">
+        <div id="banner">
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="home">
+        <div id="home">
+            <h1>CASHY EVENT MANAGMENT</h1>
+        <p>At cashy management
+            we offer best of Five star
+            of All events you want
+            us to manage </p>
+    </div>
+</div>
+
+    <div class="services">
+        <div id="services">
+            <h2>SERVICES</h2>
+        <p>we offer best of photo
+            graphy and hospitality
+            in All events</p>
+    </div>
+</div>
+
+    <div class="contact">
+        <div id="contact">
+            <h2>CONTACT</h2>
+        <p>You can reach us through our 
+            numbers for events managment
+            +254705211583</p>
+    </div>
+</div>
+
+    <div class="about">
+        <div id="about">
+            <h2>ABOUT ME</h2>
+        <p>follow me for more details
+            @cashykapreaty-instagram,
+            @cashykapreatywayne
+            -facebook,
+            @cashyevent-Linkedin</p>
+            <img src="./IMG-20200824-WA0007.jpg">
+    </div>
+</div>
+
+</body>
+</html>
