--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CASHY EVENT MANAGMENT</title>
+    <title><b>CASHY EVENT MANAGMENT</b></title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
