made changes to the website

--- a/index.html
+++ b/index.html
@@ -1,63 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><b>CASHY EVENT MANAGMENT</b></title>
-    <link rel="stylesheet" href="./index.css">
+    <title>CASHY EVENT MANAGMENT</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <div class="nav">
         <div id="banner">
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+
                 </ul>
             </nav>
         </div>
     </div>
     <div class="home">
         <div id="home">
-            <h1>CASHY EVENT MANAGMENT</h1>
-        <p>At cashy management
-            we offer best of Five star
-            of All events you want
-            us to manage </p>
+            <h1 id="intro">CASHY <br>
+                EVENT<br>
+                MANAGEMENT</h1>
+            <h3>At cashy management
+                we offer best of Five star
+                of All events you want
+                us to manage </h3>
+        </div>
+    </div><br>
+    <div>
+        <div class="event">
+            <h1>Are you ready to meet again</h1>
+            <p>Maybe you have many attendees not travelling? Or you have speakers who cannot physically attend? Or you
+                are
+                holding the same conference in different regions and you want to integrate the sessions online? If so,
+                cashy events is the solution.</p>
+        </div>
     </div>
-</div>
+    <br><br><br>
+    <div class="event1">
+        <div>
+            <img src="images/remote.jpeg" alt="" width="500px" height="300px">
+        </div>
+        <div class="text1">
+            <h3>Remote attendance</h3>
+            <p>From safe check-in to managing their interaction, you are on control of your attendees’ activity!
+                Integrate any App including live pools, Q&A’s, simultaneous interpretation and other dynamic tools.
+                Monetize your event by selling remote attendance to plenaries and breakout sessions, and offering
+                exposure to your sponsors. These are some of the advantages of cashy events.</p>
+            <p>From safe check-in to managing their interaction, you are on control of your attendees’ activity!
+                Integrate any App including live pools, Q&A’s, </p>
+        </div>
+    </div>
+    <br><br><br>
 
-    <div class="services">
-        <div id="services">
-            <h2>SERVICES</h2>
-        <p>we offer best of photo
-            graphy and hospitality
-            in All events</p>
+
+    <div class="event2">
+        <div class="text2">
+            <h3>Live Streaming</h3>
+            <p>Allows you to increase the reach of your event to a greater audience! From the comfort of their home or
+                office, people can remotely attend any sessions of your event from anywhere in the world. This is
+                achieved using the most secure methods currently available in the production of cashy events.</p>
+            <p>This is an unique feature of the virtual studio, which avoids the need for post-production because the
+                virtual background can easily be programmed by graphic designers, digital artists and programmers
+                specialized</p>
+        </div>
+        <div id="image2">
+            <img src="images/live.jpeg" alt="" width="500px" height="300px">
+        </div>
     </div>
-</div>
+    <br><br><br>
+
+    <div class="event3">
+        <div>
+            <img src="images/virtual.jpeg" alt="" width="500px" height="300px">
+        </div>
+        <div class="text3">
+            <h3>From Chroma Studio to the virtual Presentation</h3>
+            <p>A Chroma studio set is a studio built with a neutral background, which enables the production to control
+                and manipulate the graphic aspect of it in real time. </p>
+            <p>In the virtual studio set you can use the camera to move in the 3D virtual space, meaning that the
+                virtual
+                scene can adapt to camera settings for functions like zooming, pan, angle among others. </p>
+        </div>
+    </div>
+<br><br>
+
 
     <div class="contact">
-        <div id="contact">
-            <h2>CONTACT</h2>
-        <p>You can reach us through our 
-            numbers for events managment
-            +254705211583</p>
+        <p>© 2020 Copyright: Shoplify.com</p>
     </div>
-</div>
 
-    <div class="about">
-        <div id="about">
-            <h2>ABOUT ME</h2>
-        <p>follow me for more details
-            @cashykapreaty-instagram,
-            @cashykapreatywayne
-            -facebook,
-            @cashyevent-Linkedin</p>
-            <img src="./IMG-20200824-WA0007.jpg">
-    </div>
-</div>
+
 
 </body>
+
 </html>
